fix bug : bold 2days #122

--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -22,13 +22,13 @@
         </div>
         <div id="clock-right">
             <div id="day-wrapper">
-                <span id="day0">日</span>
-                <span id="day1">月</span>
-                <span id="day2">火</span>
-                <span id="day3">水</span>
-                <span id="day4">木</span>
-                <span id="day5">金</span>
-                <span id="day6">土</span>
+                <span class="days" id="day0">日</span>
+                <span class="days" id="day1">月</span>
+                <span class="days" id="day2">火</span>
+                <span class="days" id="day3">水</span>
+                <span class="days" id="day4">木</span>
+                <span class="days" id="day5">金</span>
+                <span class="days" id="day6">土</span>
             </div>
             <div id="main-clock-wrapper">
                 <span id="hour">19</span>
