tmp : fix bug on stg v0.2.7.5

--- a/src/html/set_createship.html
+++ b/src/html/set_createship.html
@@ -49,6 +49,7 @@
     <script type="text/javascript" src="../js/pages/set_manual_timer_base.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/EventsBase.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/SoloEventBase.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/createships/Createship.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/createships/Createships.js"></script>
     <script type="text/javascript" src="../js/pages/set_createship.js"></script>
