--- a/src/html/set_nyukyo.html
+++ b/src/html/set_nyukyo.html
@@ -24,9 +24,9 @@
                             <td></td>
                         </tr>
                         <tr>
-                            <td><input id="input-hour"   type="text" size="2" value="03" readonly></td>
+                            <td><input id="input-hour"   type="text" size="2" value="03"></td>
                             <td>:</td>
-                            <td><input id="input-minute" type="text" size="2" value="45" readonly></td>
+                            <td><input id="input-minute" type="text" size="2" value="45"></td>
                             <td>後</td>
                        </tr>
                        <tr class="carret-container">
