interface for set popup background

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -58,6 +58,16 @@
                     <td><input id="popup-select-title" type="text" size="50" placeholder="提督 仕事しろ"></td>
                 </tr>
                 <tr>
+                    <td>アイコンポップアップの背景</td>
+                    <td>
+                        <img width="100" id="popup-bg-img">
+                        <hr>
+                        <input id="popup-bg-img-file" target="notification-img-url" type="file" accept="image/*"/><br/>
+                        <span class="xsmall">1回選択してキャンセルするとデフォルトに戻せます</span><br>
+                        <span id="popup-bg-img-file-validation" class="xsmall validation-message"></span>
+                    </td>
+                </tr>
+                <tr>
                     <td colspan="2"><h4>[通知関係]</h4></td>
                 </tr>
                 <tr>
