improve build check

--- a/src/html/config.html
+++ b/src/html/config.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="../css/config.css">
     </head>
     <body>
-        <h3>艦これウィジェット<br>ver0.2.7</h3>
+        <h3>艦これウィジェット<br>
+          <span id="version">ver0.2.7</span>
+        </h3>
         <ul>
             <li>設定
                 <ul>
