fix disguise design

--- a/src/html/config.html
+++ b/src/html/config.html
@@ -11,8 +11,7 @@
         <ul>
             <li>設定
                 <ul>
-                    <li>遠征発着のポップアップするならチェック:<input type="checkbox" name="doAlert" id="doAlert"></li>
-                    <li><a href="src/html/more.html">もっとリッチな設定する！</a></li>
+                    <li><a href="src/html/more.html">リッチな設定へ</a></li>
                 </ul>
             </li>
             <li>これについて
