explanation for shortcut keybinding

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -37,7 +37,10 @@
                 </tr>
                 <tr>
                     <td>
-                        スクショボタン表示<br>
+                        スクショボタン表示
+                        <span class="xsmall">
+                            （Ctrl + Shift + 0）
+                        </span><br>
                         <span class="xsmall">
                             注意：一部ブラウザで画像が松崎しげるになる現象が確認されています。
                             詳しくは<a href="https://github.com/otiai10/kanColleWidget/issues/106">ここ</a>
