--- a/src/html/select.html
+++ b/src/html/select.html
@@ -86,7 +86,8 @@
                 </table>
             </div>
         </div>
-        <button id="show-clockmode-button">clock mode</button><br>
+        <button id="show-clockmode-button" tabindex="4">clock mode</button>
+        <input id="mute"  name="mute" type="submit" value="" tabindex="3" class="off"/><br>
         <a href="/src/html/config.html"><small>これの設定など</small></a>
     </div>
     <script type="text/javascript" src="../js/Constants.js"></script>
