--- a/src/html/more.html
+++ b/src/html/more.html
@@ -57,6 +57,15 @@
                     <td><input id="show-clockmode-button" type="checkbox"></td>
                 </tr>
                 <tr>
+                    <td>
+                        ミュートボタン表示
+                        <span class="xsmall">
+                            （Ctrl + Shift + m で、ミュートにする）
+                        </span><br>
+                    </td>
+                    <td><input id="enable-mute-button" type="checkbox"></td>
+                </tr>
+                <tr>
                     <td>最初に出てくる文字</td>
                     <td><input id="popup-select-title" type="text" size="50" placeholder="提督 仕事しろ"></td>
                 </tr>
