Revert "enable mute button and shortcut keybind"
This reverts commit c342d48bfa65850afccb33cc99ae61d628be6820.

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -86,8 +86,7 @@
                 </table>
             </div>
         </div>
-        <button id="show-clockmode-button" tabindex="4">clock mode</button>
-        <input id="mute"  name="mute" type="submit" value="" tabindex="3" class="off"/><br>
+        <button id="show-clockmode-button">clock mode</button><br>
         <a href="/src/html/config.html"><small>これの設定など</small></a>
     </div>
     <script type="text/javascript" src="../js/Constants.js"></script>
