--- a/src/html/more.html
+++ b/src/html/more.html
@@ -67,7 +67,10 @@
                         <hr>
                         <input id="popup-bg-img-file" target="notification-img-url" type="file" accept="image/*"/><br/>
                         <span class="xsmall">1回選択してキャンセルするとデフォルトに戻せます</span><br>
-                        <span id="popup-bg-img-file-validation" class="xsmall validation-message">200px × 500くらいが最適です</span>
+                        <span id="popup-bg-img-file-validation" class="xsmall validation-message">
+                            200px × 500くらいが最適です。
+                            縦横比を維持しつつ画面を覆えるサイズになってフィットします。
+                        </span>
                     </td>
                 </tr>
                 <tr>
