--- a/src/html/more.html
+++ b/src/html/more.html
@@ -24,6 +24,20 @@
                     <td>残り時間をバッチ表示する<a href="https://pbs.twimg.com/media/BTJoojqCMAAqFy3.png"><img src="https://pbs.twimg.com/media/BTNXZaCCIAADciW.png" width="30px"></a></td>
                     <td><input id="badge-left-time" type="checkbox"></td>
                 </tr>
+                <tr>
+                    <td>
+                        入渠・建造時リマインダー登録機能を有効にする<br>
+                        <p class="xsmall">
+                            画面解像度が低い/ウィジェットが小さいなどの環境では失敗することが多いです。
+                            <br>詳しい実装はこちら : [<a href="https://github.com/otiai10/kanColleWidget">クライアント(JavaScript)</a>] [<a href="https://github.com/otiai10/ocrServer">サーバ(Python)</a>]
+                        </p>
+                    </td>
+                    <td>
+                        <input name="dynamic-reminder-type" class="dynamic-reminder-type" type="radio" value="0">何もしない <span class="xsmall">入渠・建造のリマインダは使わないというひと</span><br>
+                        <input name="dynamic-reminder-type" class="dynamic-reminder-type" type="radio" value="1">常に手動登録ウィンドウを出す <span class="xsmall">自動取得失敗とかウザいってひと</span><br>
+                        <input name="dynamic-reminder-type" class="dynamic-reminder-type" type="radio" value="2">自動取得 <span class="xsmall">失敗したら手動登録ウィンドウが出ます</span><br>
+                    </td>
+                </tr>
 
                 <tr>
                     <td colspan="2"><h4>[アイコンツール関係]</h4></td>
@@ -147,21 +161,7 @@
                 <tr>
                     <td colspan="2"><h4>[その他、開発中のもの]<span class="xsmall">ご意見お待ちしております</span></h4></td>
                 </tr>
-                <tr>
-                    <td>
-                        入渠・建造時リマインダー登録機能を有効にする<br>
-                        <p class="xsmall">
-                            艦これウィジェットでは、艦これ本家のサーバへ迷惑をかけないために、自前のサーバにブラウザのキャプチャ画像を送り画像解析をして時間を取得しています。
-                            そのため、回線が遅い/画面解像度が低い/ウィジェットが小さい、と失敗することが多いです。普通以上の大きな画面で、通信速度に問題の無い環境でプレーされるひと向けです。
-                            <br>詳しい実装はこちら : [<a href="https://github.com/otiai10/kanColleWidget">クライアント(JavaScript)</a>] [<a href="https://github.com/otiai10/ocrServer">サーバ(Python)</a>]
-                        </p>
-                    </td>
-                    <td>
-                        <input name="dynamic-reminder-type" class="dynamic-reminder-type" type="radio" value="0">何もしない <span class="xsmall">入渠・建造のリマインダは使わないというひと</span><br>
-                        <input name="dynamic-reminder-type" class="dynamic-reminder-type" type="radio" value="1">常にマニュアル登録ウィンドウを出す <span class="xsmall">自動取得失敗とかウザいってひと</span><br>
-                        <input name="dynamic-reminder-type" class="dynamic-reminder-type" type="radio" value="2">自動取得 <span class="xsmall">決定ボタンを押してから数秒放置してください。失敗したらマニュアル登録ウィンドウが出ます</span><br>
-                    </td>
-                </tr>
+
                 <tr class="yet">
                     <td>建造レシピメモ</td>
                     <td><input type="text" size="50" placeholder="400/10/600/10 とか" disabled></td>
