--- a/src/html/more.html
+++ b/src/html/more.html
@@ -28,7 +28,7 @@
                     <td>
                         入渠・建造時リマインダー登録機能を有効にする<br>
                         <p class="xsmall">
-                            画面解像度が低い/ウィジェットが小さいなどの環境では失敗することが多いです。
+                            画像キャプチャの時間表時部分をサーバに送って画像解析してます。画面解像度が低い/ウィジェットが小さいなどの環境では失敗することが多いです。
                             <br>詳しい実装はこちら : [<a href="https://github.com/otiai10/kanColleWidget">クライアント(JavaScript)</a>] [<a href="https://github.com/otiai10/ocrServer">サーバ(Python)</a>]
                         </p>
                     </td>
