only cofig interface for ocr failure logging

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -38,6 +38,13 @@
                         <input name="dynamic-reminder-type" class="dynamic-reminder-type" type="radio" value="2">自動取得 <span class="xsmall">失敗したら手動登録ウィンドウが出ます</span><br>
                     </td>
                 </tr>
+                <tr>
+                    <td>自動取得失敗レポートを送信する</td>
+                    <td>
+                        <input id="allow-ocr-result-log" type="checkbox">
+                        <span class="xsmall">精度向上にご協力くだしあ！時間部分の画像断片と解析失敗結果を自前のログサーバに送信します
+                    </td>
+                </tr>
 
                 <tr>
                     <td colspan="2"><h4>[アイコンツール関係]</h4></td>
