--- a/src/html/more.html
+++ b/src/html/more.html
@@ -207,8 +207,7 @@
                         <a href="https://twitter.com/KanColle_STAFF/statuses/373961855586140161">公式から</a>
                     </td>
                     <td>
-                        艦これウィジェットはブラウザの表示領域抽出と、プレー中に発生するリクエストを検出して（改ざんはしてないココがミソ）ポップアップ出してるだけなので、チート的な要素はゼロだと思ってます。
-                        大前提として<b>「イケナイことはしない！」「運営困らせない！」<a href="https://twitter.com/otiai10/status/373977136891064320">参考</a></b>
+                        参考：<a href="http://www.slideshare.net/otiai10/ss-26631311">艦これウィジェットの機能説明</a>
                     </td>
                 </tr>
                 <tr>
