add devide sound settings

--- a/src/html/set_createship.html
+++ b/src/html/set_createship.html
@@ -28,13 +28,13 @@
                             <td>:</td>
                             <td><input id="input-minute" type="text" size="2" value="45"></td>
                             <td>後</td>
-                       </tr>
-                       <tr class="carret-container">
+                        </tr>
+                        <tr class="carret-container">
                             <td><div target="input-hour" class="carret down">&gt;</div></td>
                             <td></td>
                             <td><div target="input-minute" class="carret down">&gt;</div></td>
                             <td></td>
-                       </tr>
+                        </tr>
                     </tbody>
                 </table>
                 <div id="right-bottom-lack"></div>
@@ -44,6 +44,8 @@
     <div id="footer" class="content">
         <button id="register-cancel" class="btn">今回はいいです</button><button id="register-commit" class="btn">登録</button>
     </div>
+    <script type="text/javascript" src="../js/AssetManager.js"></script>
+    <script type="text/javascript" src="../js/Notifier.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/Constants.js"></script>
     <script type="text/javascript" src="../js/pages/set_manual_timer_base.js"></script>
