--- a/src/html/more.html
+++ b/src/html/more.html
@@ -151,12 +151,16 @@
                 <tr>
                     <td>通知時に音声を再生</td>
                     <td>
-
-                        <hr/>
                         <span>デフォルト：<span id="notification-sound-file-already-set"></span><input type="submit" id="notification-test" value="テスト"/></span><br/>
                         <input id="notification-sound-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
-                        <button id="open-notification-sound-extend">もっと細かく設定したいのです！</button>
-                        <hr/>
+
+                        <span  id="notification-sound-file-validation" class="xsmall validation-message"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>通知時音声設定+</td>
+                    <td>
+                        <a id="open-notification-sound-extend">開く</a>
                         <div id="notification-sound-extend" style="display:none;">
                             <span>遠征出発：<span id="notification-sound-expedition-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="expedition-start" value="テスト"/></span><br/>
                             <input id="notification-sound-expedition-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
@@ -176,9 +180,9 @@
                             <span>建造終了：<span id="notification-sound-construction-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="construction-finish" value="テスト"/></span><br/>
                             <input id="notification-sound-construction-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
                             <hr/>
+                            <span class="xsmall">1回選択してキャンセルするとデフォルトに戻せます</span><br>
+                            <a id="close-notification-sound-extend">とじる</a>
                         </div>
-                        <span class="xsmall">1回選択してキャンセルするとデフォルトに戻せます</span><br>
-                        <span  id="notification-sound-file-validation" class="xsmall validation-message"></span>
                     </td>
                 </tr>
                 <tr>
