change kind name : adjust to kcsapi

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -162,23 +162,23 @@
                     <td>
                         <a id="open-notification-sound-extend">開く</a>
                         <div id="notification-sound-extend" style="display:none;">
-                            <span>遠征出発：<span id="notification-sound-expedition-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="expedition-start" value="テスト"/></span><br/>
-                            <input id="notification-sound-expedition-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                            <span>遠征出発：<span id="notification-sound-mission-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="mission-start" value="テスト"/></span><br/>
+                            <input id="notification-sound-mission-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
                             <hr/>
-                            <span>遠征帰投：<span id="notification-sound-expedition-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="expedition-finish" value="テスト"/></span><br/>
-                            <input id="notification-sound-expedition-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                            <span>遠征帰投：<span id="notification-sound-mission-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="mission-finish" value="テスト"/></span><br/>
+                            <input id="notification-sound-mission-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
                             <hr/>
-                            <span>入渠開始：<span id="notification-sound-docking-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="docking-start" value="テスト"/></span><br/>
-                            <input id="notification-sound-docking-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                            <span>入渠開始：<span id="notification-sound-nyukyo-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="nyukyo-start" value="テスト"/></span><br/>
+                            <input id="notification-sound-nyukyo-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
                             <hr/>
-                            <span>入渠終了：<span id="notification-sound-docking-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="docking-finish" value="テスト"/></span><br/>
-                            <input id="notification-sound-docking-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                            <span>入渠終了：<span id="notification-sound-nyukyo-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="nyukyo-finish" value="テスト"/></span><br/>
+                            <input id="notification-sound-nyukyo-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
                             <hr/>
-                            <span>建造開始：<span id="notification-sound-construction-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="construction-start" value="テスト"/></span><br/>
-                            <input id="notification-sound-construction-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                            <span>建造開始：<span id="notification-sound-createship-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="createship-start" value="テスト"/></span><br/>
+                            <input id="notification-sound-createship-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
                             <hr/>
-                            <span>建造終了：<span id="notification-sound-construction-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="construction-finish" value="テスト"/></span><br/>
-                            <input id="notification-sound-construction-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                            <span>建造終了：<span id="notification-sound-createship-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="createship-finish" value="テスト"/></span><br/>
+                            <input id="notification-sound-createship-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
                             <hr/>
                             <span class="xsmall">1回選択してキャンセルするとデフォルトに戻せます</span><br>
                             <a id="close-notification-sound-extend">とじる</a>
