--- a/src/html/more.html
+++ b/src/html/more.html
@@ -42,7 +42,8 @@
                     <td>自動取得失敗レポートを送信する</td>
                     <td>
                         <input id="allow-ocr-result-log" type="checkbox">
-                        <span class="xsmall">精度向上にご協力くだしあ！時間部分の画像断片と解析失敗結果を自前のログサーバに送信します
+                        <span class="xsmall">精度向上にご協力くだしあ！時間部分の画像断片と解析失敗結果を自前のログサーバに送信します</span><br>
+                        <span class="xsmall">送信された失敗ログは<a href="http://log-kcwidget.oti10.com:7777/ocr">ここ</a>で見ることができます</span>
                     </td>
                 </tr>
 
