--- a/src/html/more.html
+++ b/src/html/more.html
@@ -43,7 +43,7 @@
                     <td>
                         <input id="allow-ocr-result-log" type="checkbox">
                         <span class="xsmall">精度向上にご協力くだしあ！時間部分の画像断片と解析失敗結果を自前のログサーバに送信します</span><br>
-                        <span class="xsmall">送信された失敗ログは<a href="http://log-kcwidget.oti10.com:7777/ocr">ここ</a>で見ることができます</span>
+                        <span class="xsmall">送信された失敗ログは<a href="http://log-kcwidget.oti10.com/ocr">ここ</a>で見ることができます</span>
                     </td>
                 </tr>
 
