--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -51,6 +51,9 @@
             <ul id="time-list-container-createships"></ul>
         </div>
     </div>
+    <div id="edit-timer">
+      <a href="../html/edittimer.html"><img id="img img-edit" src="../img/edit.png"></a>
+    </div>
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/pages/dashboard.js"></script>
