add checkbox `start` and `finish` on `notifications-stay-visible`.

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -115,7 +115,9 @@
                         通知ポップアップが自動で消えずに見えるまんまにする
                     </td>
                     <td>
-                        <input id="notification-stay-visible" type="checkbox">
+                        <input id="notification-stay-visible-start" type="checkbox">登録時
+                        <input id="notification-stay-visible-finish" type="checkbox">終了時
+                        <input id="notification-stay-visible" type="checkbox">その他<br>
                         <span class="xsmall">デフォルトで放っておくとウィンドウがエラー娘だらけになるということ</span>
                     </td>
                 </tr>
