--- a/src/html/more.html
+++ b/src/html/more.html
@@ -25,6 +25,17 @@
                     <td><input id="badge-left-time" type="checkbox"></td>
                 </tr>
                 <tr>
+                    <td>数分前通知する</td>
+                    <td>
+                        <select id="notification-offset-millisec" name="notification-offset-millisec">
+                            <option value="0">時間ちょうど</option>
+                            <option value="60000">一分前</option>
+                            <option value="120000">二分前</option>
+                            <option value="180000">三分前</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
                     <td>
                         入渠・建造時リマインダー登録機能を有効にする<br>
                         <p class="xsmall">
