--- a/src/html/more.html
+++ b/src/html/more.html
@@ -22,7 +22,10 @@
                 </tr>
                 <tr>
                     <td>残り時間をバッチ表示する<a href="https://pbs.twimg.com/media/BTJoojqCMAAqFy3.png"><img src="https://pbs.twimg.com/media/BTNXZaCCIAADciW.png" width="30px"></a></td>
-                    <td><input id="badge-left-time" type="checkbox"></td>
+                    <td>
+                        <input id="badge-left-time" type="checkbox">
+                        <span class="xsmall">残り時間を表示しない場合は、終了件数が表示されます</span>
+                    </td>
                 </tr>
                 <tr>
                     <td>数分前通知する</td>
