--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 </head>
 <body>
 <div id="header">
-<a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja">ツイート</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  <a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja">ツイート</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </div>
+<h1 class="xlarge">艦これウィジェット <img src="src/img/icon.png" /></h1>
+艦これウィジェットは推奨環境であるChromeを艦これに最適化させるChrome拡張です
 
 <div id="twitter-stream">
-<a class="twitter-timeline" href="https://twitter.com/search?q=%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88" data-widget-id="390412681213001728">艦これウィジェット に関するツイート</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  <a class="twitter-timeline" href="https://twitter.com/search?q=%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88" data-widget-id="390412681213001728">艦これウィジェット に関するツイート</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
-
-<h1>艦これウィジェット</h1>
-艦これウィジェットは推奨環境であるChromeを艦これに最適化させるChrome拡張です
 
 <h1>使い方</h1>
 インストールはこちらから。で、準備完了
@@ -51,7 +50,7 @@ Chrome ウェブストア - 艦これウィジェット
     </li>
     <li>規約違反なんすか？
         <ul>
-            <li>Chromeなので、<pre>（8）不正な方法（特殊なプログラムを介しての）でのアクセスを試みる行為</pre>には該当しないと考えております</li>
+            <li>Chromeなので、<pre class="inline">（8）不正な方法（特殊なプログラムを介しての）でのアクセスを試みる行為</pre>には該当しないと考えております</li>
         </ul>
     </li>
     <li>チートできないんすか？
