add uninstall explanation

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
 
 <h1>使い方</h1>
 インストールはこちらから。で、準備完了
-
 <a href="https://chrome.google.com/webstore/detail/%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88/iachoklpnnjfgmldgelflgifhdaebnol">
 Chrome ウェブストア - 艦これウィジェット
 </a>
+<ul>
+  <li>拡張アイコンを右クリックから簡単にアンインストールできます</li>
+</ul>
+
+
 <h1>機能</h1>
 <ul>
     <li>機能概要
