add background Kaga-san

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css/markdown.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="pages/css/markdown.css">
+    <link rel="stylesheet" href="pages/css/index.css">
     <link rel="shortcut icon" href="src/img/icon.png">
     <title>艦これウィジェット プロジェクトページ</title>
     <meta charset="utf-8">
@@ -195,7 +195,8 @@ Chrome ウェブストア - 艦これウィジェット
     - 公開
 </pre>
 <div id="footer">
-    <span>Copyright otiai10. All Right Reserved.</span>
+    <p class="copyright">Copyright otiai10. All Right Reserved.</p>
+    <span>Thank you all, 提督!</span>
 </div>
 </body>
 </html>
