--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta charset="utf-8">
 </head>
 <body>
+<!--
+  -- ソースコードを見て頂きありがとうございます!
+  -- 機能改善、バグ報告などお待ちしております。
+  -- 開発スピードが遅くてご迷惑おかけしているかとは思いますが、
+  -- 那珂ちゃんのことは嫌いにならないで下さい。
+-->
 <div id="header">
   <a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja">ツイート</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
@@ -99,7 +105,7 @@ Chrome ウェブストア - 艦これウィジェット
 <h1>開発</h1>
 
 <p>
-    以下のレポジトリでOSS開発をしております。ForkするなりPRするなりご自由にどうぞ！
+    以下のレポジトリでOSS開発をしております。pull-reqお待ちしております！
     <a href="https://github.com/otiai10/kanColleWidget">https://github.com/otiai10/kanColleWidget</a>
 </p>
 <p><a href="#">README for DEV</a> (現在建設中)</p>
