fix design a bit

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 </div>
 
 <h1>使い方</h1>
-インストールはこちらから。で、準備完了
-<a href="https://chrome.google.com/webstore/detail/%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88/iachoklpnnjfgmldgelflgifhdaebnol">
-Chrome ウェブストア - 艦これウィジェット
-</a>
 <ul>
-  <li>拡張アイコンを右クリックから簡単にアンインストールできます</li>
+  <li>インストールはこちらから。で、準備完了
+    <a href="https://chrome.google.com/webstore/detail/%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88/iachoklpnnjfgmldgelflgifhdaebnol">
+      Chrome ウェブストア - 艦これウィジェット
+    </a>
+  </li>
+  <li>拡張アイコンを右クリックから簡単に削除/アンインストールできます</li>
 </ul>
 
 
@@ -48,12 +49,14 @@ Chrome ウェブストア - 艦これウィジェット
             <li>艦これだけの別窓を開いてくれます</li>
             <li>遠征・入渠・建造のタイマーを自動で設定してくれます</li>
             <li>通知します</li>
-            <li>その他艦娘ぺろぺろ</li>
+            <li>その他艦娘ぺろぺろ（詳しくは詳細設定をご覧ください）</li>
         </ul>
+    </li>
+    <li>
+      参考資料 <a href="http://www.slideshare.net/otiai10/ss-26631311">加賀さんと僕〜艦これウィジェットの紹介と説明〜</a>
     </li>
 </ul>
 
-参考資料 <a href="http://www.slideshare.net/otiai10/ss-26631311">加賀さんと僕〜艦これウィジェットの紹介と説明〜</a>
 
 <h1>よくある質問</h1>
 
@@ -103,21 +106,26 @@ Chrome ウェブストア - 艦これウィジェット
             <li>艦これの面白さを損なわないこと</li>
         </ul>
     </li>
+    <li>
+      参考資料 <a href="http://www.slideshare.net/otiai10/ss-26908975">加賀さんと僕（実装編）〜艦これウィジェットの課題と実装〜</a>
+    </li>
 </ul>
 
-参考資料 <a href="http://www.slideshare.net/otiai10/ss-26908975">加賀さんと僕（実装編）〜艦これウィジェットの課題と実装〜</a>
 
 <h1>開発</h1>
 
-<p>
-    以下のレポジトリでOSS開発をしております。pull-reqお待ちしております！
+<ul>
+  <li>
+    以下のレポジトリでOSS開発をしております。pull-reqお待ちしております！<br>
     <a href="https://github.com/otiai10/kanColleWidget">https://github.com/otiai10/kanColleWidget</a>
-</p>
-<p><a href="#">README for DEV</a> (現在建設中)</p>
+  </li>
+</ul>
 
 <h1>リリースノート（ながいので注意 <img src="https://github.global.ssl.fastly.net/images/icons/emoji/smiling_imp.png" width="25px">）</h1>
 
 <pre>
+- 2013/10/18 v0.3.2.11
+    - OCR精度向上
 - 2013/10/14 v0.3.2.7
     - タイマー登録後の編集を可能にしました
     - OCR精度向上
