fix design a bit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </div>
 <h1 class="xlarge">艦これウィジェット <img src="src/img/icon.png" /></h1>
-艦これウィジェットは推奨環境であるChromeを艦これに最適化させるChrome拡張です
+艦これウィジェットは<br>推奨環境であるChromeブラウザを艦これに最適化させるChrome拡張です
 
 <div id="twitter-stream">
   <a class="twitter-timeline" href="https://twitter.com/search?q=%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88" data-widget-id="390412681213001728">艦これウィジェット に関するツイート</a>
@@ -33,7 +33,7 @@
 
 <h1>使い方</h1>
 <ul>
-  <li>インストールはこちらから。で、準備完了
+  <li>インストールはこちらから。で、準備完了<br>
     <a href="https://chrome.google.com/webstore/detail/%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88/iachoklpnnjfgmldgelflgifhdaebnol">
       Chrome ウェブストア - 艦これウィジェット
     </a>
@@ -217,7 +217,6 @@
     <p class="copyright">Copyright otiai10. All Right Reserved.</p>
     <span id="gratitude">Thank you all, 提督!</span>
 </div>
-</body>
 <script>
 (function(){
   var gratTexts = [
@@ -250,4 +249,5 @@
   throttleScroll(onScroll);
 })();
 </script>
+</body>
 </html>
