--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </li>
 </ul>
 
-<h1>リリースノート（ながいので注意 <img src="https://github.global.ssl.fastly.net/images/icons/emoji/smiling_imp.png" width="25px">）</h1>
+<h1>リリースノート（ながいので注意!）</h1>
 
 <pre>
 - 2013/10/18 v0.3.2.11
