add facebook like button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   -- 開発スピードが遅くてご迷惑おかけしているかとは思いますが、
   -- 那珂ちゃんのことは嫌いにならないで下さい。
 -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1&appId=122961194566265";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div id="info-band">
   <a href="https://chrome.google.com/webstore/detail/%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88/iachoklpnnjfgmldgelflgifhdaebnol">
     感謝! 2万インストール
@@ -22,6 +31,7 @@
 <div id="header">
   <a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja">ツイート</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<div class="fb-like" data-href="http://otiai10.github.io/kanColleWidget/" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="true" data-send="false"></div>
 </div>
 <h1 class="xlarge">艦これウィジェット <img src="src/img/icon.png" /></h1>
 艦これウィジェットは<br>推奨環境であるChromeブラウザを艦これに最適化させるChrome拡張です
