add interface for editing timer of null

--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -54,6 +54,14 @@
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/SoloEventBase.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/EventsBase.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/nyukyos/Nyukyos.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/nyukyos/Nyukyo.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/createships/Createships.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/createships/Createship.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/missions/Missions.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/missions/Mission.js"></script>
     <script type="text/javascript" src="../js/pages/dashboard.js"></script>
 </body>
 </html>
