--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -39,7 +39,7 @@
     </div>
     <div id="time-left" class="contents boxy">
         <div id="time-list-wrapper-missions" class="time-list">
-            <p class="list-title">- 遠征隊帰投予定時刻</p>
+            <p class="list-title">- 遠征帰投予定時刻</p>
             <ul id="time-list-container"></ul>
         </div>
         <div id="time-list-wrapper-nyukyos" class="time-list">
