add interface for config sorting

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -105,6 +105,12 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>予定の表示は終了時刻順で</td>
+                    <td>
+                        <input id="sort-by-finishtime" type="checkbox">
+                    </td>
+                </tr>
+                <tr>
                     <td>最初に出てくる文字</td>
                     <td><input id="popup-select-title" type="text" size="50" placeholder="提督 仕事しろ"></td>
                 </tr>
