Fix Config popup page

--- a/src/html/config.html
+++ b/src/html/config.html
@@ -31,9 +31,17 @@
             <li>リンク
                 <ul>
                     <li>公式:<a href="http://www.dmm.com/netgame/social/-/gadgets/=/app_id=854854/">艦隊これくしょん</a></li>
-                    <li>このChrome拡張:<a href="https://chrome.google.com/webstore/detail/%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88/iachoklpnnjfgmldgelflgifhdaebnol">艦これウィジェット</a></li>
+                    <li><a href="http://otiai10.github.io/kanColleWidget/">艦これウィジェット プロジェクトページ</a></li>
+                    <li><a href="http://www.slideshare.net/otiai10/ss-26631311">加賀さんと僕(サービス概要編)</a></li>
+                    <li><a href="http://www.slideshare.net/otiai10/ss-26908975">加賀さんと僕(実装編)</a></li>
+                    <li>「航海日誌」と合わせると良いらしい...知らんけど
+                      <ul><li><a href="https://twitter.com/RGR4Y/status/388514575202537472">“艦これウィジェットと組み合わせると強い。...”</a></li></ul>
+                    </li>
                 </ul>
 
+            </li>
+            <li>
+              Thank you all, 提督.
             </li>
         </ul>
         <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
